Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -225,7 +225,7 @@
     }
    ],
    "source": [
-    "kindof_neighbors = (3:6)\n",
+    "kindof_neighbors = countries[]\n",
     "kindof_neighbors"
    ]
   },
