--- a/index.ipynb
+++ b/index.ipynb
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -267,10 +267,12 @@
        " 'South Korea',\n",
        " 'Malta',\n",
        " 'Thailand',\n",
+       " 'Malta',\n",
+       " 'Thailand',\n",
        " 'Malta']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -326,10 +328,12 @@
        " 'Malta',\n",
        " 'Thailand',\n",
        " 'Malta',\n",
+       " 'Thailand',\n",
+       " 'Malta',\n",
        " 'Thailand']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
