--- a/index.ipynb
+++ b/index.ipynb
@@ -450,7 +450,7 @@
     " 'Malta', \n",
     " 'Thailand']\n",
     "countries.pop() # 'Thailand'\n",
-    "countries.append\n",
+    "countries.append(Thailand)\n",
     "# ['Croatia', 'USA', 'Argentina', 'Mexico', 'USA', 'Morocco', 'USA', 'Finland',  'Argentina', 'Italy', 'Canada', 'South Korea',  'Malta']"
    ]
   },
