--- a/index.ipynb
+++ b/index.ipynb
@@ -481,7 +481,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries =set(countries)"
+    "unique_countries =listset(countries)"
    ]
   },
   {
