--- a/index.ipynb
+++ b/index.ipynb
@@ -477,11 +477,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries =listset(countries)"
+    "unique_countries =list(set(countries))"
    ]
   },
   {
